...
        <TextView
            android:id="@+id/periodTitle"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="48dp"
            android:text="@string/period"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTitle" />

        <Spinner
            android:id="@+id/accountType"
            android:layout_width="196dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:entries="@array/account"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/currencyType"
            app:layout_constraintTop_toBottomOf="@+id/accountTitle" />

        <TextView
            android:id="@+id/amountTitle"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/period" />

        <EditText
            android:id="@+id/customername"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="13dp"
            android:ems="10"
            android:hint="Enter Your Name"
...
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountTitle" />

        <EditText
            android:id="@+id/foods"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="Amount"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenseTitle" />

        <EditText
            android:id="@+id/shopping"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="Amount"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foods" />

        <EditText
            android:id="@+id/transpotation"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="Amount"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopping" />

        <EditText
            android:id="@+id/housing"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="Amount"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transpotation" />

        <EditText
            android:id="@+id/communication"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="Amount"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/housing" />

        <EditText
            android:id="@+id/finance"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Amount"
...
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/communication"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/life"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="Amount"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/finance" />

        <EditText
            android:id="@+id/other"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Amount"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/life"
            tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/btnSaveData"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="30dp"
...
