...
    <string name="account">Account</string>
    <string name="expenseTitle">Expense Catogery</string>

    <string-array name="period">
        <item>None</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
        <item>One Time</item>
    </string-array>
    <string-array name="currency">
        <item>USD</item>
        <item>LKR</item>
        <item>AMD</item>
        <item>AED</item>
        <item>AUD</item>
        <item>JPY</item>
    </string-array>
...
